# dear-andy

./: .gitignore  CLAUDE.md  Makefile  README.md  SETUP_PUBLISH.md  optimization_notes.md  pyproject.toml
src/html_gen/: generate.py
src/pdf_tools/: extract_svg.py
templates/: sample_base.html
tests/unit/: test_html_gen.py  test_pdf_tools.py  test_svg_optimization.py
